--- a/public/views/pagos/insertarPago.html
+++ b/public/views/pagos/insertarPago.html
@@ -11,14 +11,32 @@
   <!-- Iconos de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <style>
-    body {
-      background-color: #dad9d8;
+     body {
+      background-color: #f8f9fa;
     }
     .card {
-      box-shadow: 0 4px 12px rgba(214, 18, 18, 0.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
     .form-label {
       font-weight: 500;
+    }
+    #vistaPrevia {
+      display: none;
+      margin-top: 15px;
+      border: 2px solid #dee2e6;
+      border-radius: 8px;
+      padding: 10px;
+      background-color: #fff;
+    }
+    #imgPrevia {
+      max-width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
+    .file-name {
+      font-size: 0.9rem;
+      color: #6c757d;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -62,20 +80,30 @@
                   </div>
 
                 <!-- Metodo de pago -->
-                <div class="col-md-6 mb-3">
-                  <label for="metodoPago" class="form-label">Metodo de pago <span class="text-danger">*</span></label>
-                  <input type="tel" class="form-control" id="metodoPago" name="metodoPago" required>
+                <div class="col-md-6" >
+                  <label for="saldoPendiente" class="form-label required">Metodo de pago</label>
+                   <select class="form-select" aria-label="Default select example">
+                      <option selected>Seleccione</option>
+                      <option value="1">Efectivo</option>
+                      <option value="2">Transacciones</option>
+                      </select>
                 </div>
               </div>
 
               <!-- Comprobante de pago -->
 
               <div class="mb-4">
-              <label for="notas" class="form-label">Insertar Comprobante de pago <small class="text-muted"></small></label>
-              <input type="file" class="form-control">
-              <textarea class="form-control" id="comprobante" name="notas" rows="3" 
-              placeholder="El archivo se cargará aqui"></textarea>
+              <label for="comprobante" class="form-label">Insertar Comprobante de pago <small class="text-muted"></small></label>
+              <input type="file" class="form-control" id="comprobante" name="comprobante" accept="image/*">
               </div>
+
+              <!-- Vista previa de la imagen -->
+               <div id="vistaPrevia">
+                <div class="text-center">
+                  <img id="imgPrevia" src="" alt="Vista previa">
+                  <p class="file-name" id="nombreArchivo"></p>  
+                </div>
+               </div>
 
               <!-- Botones -->
               <div class="d-flex gap-2 d-md-flex justify-content-md-end">
@@ -94,7 +122,7 @@
     </div>
   </div>
 
-  
- 
+<script src="/public/js/pago.js"></script>  
+
 </body>
 </html>
