Separando el css a carpeta a parte

--- a/public/views/pagos/insertarPago.html
+++ b/public/views/pagos/insertarPago.html
@@ -10,35 +10,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Iconos de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <style>
-     body {
-      background-color: #f8f9fa;
-    }
-    .card {
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .form-label {
-      font-weight: 500;
-    }
-    #vistaPrevia {
-      display: none;
-      margin-top: 15px;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 10px;
-      background-color: #fff;
-    }
-    #imgPrevia {
-      max-width: 100%;
-      height: auto;
-      border-radius: 4px;
-    }
-    .file-name {
-      font-size: 0.9rem;
-      color: #6c757d;
-      margin-top: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="/Proyecto-Final-Seminario/public/css/insertarPago.css">
+  
 </head>
 <body>
   <div class="container mt-5">
