--- a/public/views/cliente/crearCliente.html
+++ b/public/views/cliente/crearCliente.html
@@ -10,17 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Iconos de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #dad9d8;
-    }
-    .card {
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .form-label {
-      font-weight: 500;
-    }
-  </style>
+  <link rel="stylesheet" href="/Proyecto-Final-Seminario/public/css/crearCliente.css">
 </head>
 <body>
   <div class="container mt-5">
