--- a/public/views/prestamo/insertarPrestamo.html
+++ b/public/views/prestamo/insertarPrestamo.html
@@ -10,13 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    
-    <style>
-       body {
-      background-color: #dad9d8;
-    }
-    
-    </style>
+    <link rel="stylesheet" href="/Proyecto-Final-Seminario/public/css/insertarPrestamo.css">
 </head>
 <body>
     <div class="container">
