Se conecto la vista clientes con el back

--- a/public/views/cliente/crearCliente.html
+++ b/public/views/cliente/crearCliente.html
@@ -22,7 +22,7 @@
             <small class="d-block">Empresa de Préstamos Los Senatinos</small>
           </div>
           <div class="card-body p-4">
-            <form action="insertar-cliente" method="POST" id="formCliente" autocomplete="off">
+            <form method="get" id="formCliente" autocomplete="off">
               <div class="row">
                 <!-- Nombre -->
                 <div class="col-md-6 mb-3">
@@ -102,8 +102,9 @@
       </div>
     </div>
   </div>
-
   
+  <!-- Script para clientes -->
+  <script src="../../js/apiClientes.js"></script>
  
 </body>
 </html>
