Se agrego una version estable para registrar clientes

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -66,9 +66,9 @@
       </p>
 
       <div class="action-buttons">
-        <button class="btn btn-success-custom btn-custom" id="btn-agregar">
+        <a href="clientes/crear" class="btn btn-success-custom btn-custom" id="btn-agregar">
           <i class="fas fa-plus"></i> AGREGAR CLIENTE
-        </button>
+        </a>
         <button class="btn btn-danger-custom btn-custom" id="btn-listar">
           <i class="fas fa-clipboard-list"></i> LISTA DE CLIENTES
         </button>
