cambios intento de implementar el buscar clientes

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -72,7 +72,7 @@
         <button class="btn btn-danger-custom btn-custom" id="btn-listar">
           <i class="fas fa-clipboard-list"></i> LISTA DE CLIENTES
         </button>
-        <button class="btn btn-dark-custom btn-custom" data-bs-toggle="modal" data-bs-target="#searchModal">
+        <button class="btn btn-dark-custom btn-custom" data-bs-toggle="modal" data-bs-target="#searchModal" id="btn-buscar"">
           <i class="fas fa-search"></i> BUSCAR CLIENTE
         </button>
       </div>
