--- a/public/views/principal/index.html
+++ b/public/views/principal/index.html
@@ -79,12 +79,12 @@
       </p>
 
       <div class="action-buttons">
-        <button class="btn btn-success-custom btn-custom">
+        <a href="/clientes/crear" class="btn btn-success-custom btn-custom">
           <i class="fas fa-plus"></i> AGREGAR CLIENTE
-        </button>
-        <button class="btn btn-danger-custom btn-custom">
+        </a>
+        <a href="/" class="btn btn-danger-custom btn-custom">
           <i class="fas fa-clipboard-list"></i> LISTA DE CLIENTES
-        </button>
+        </a>
         <button class="btn btn-dark-custom btn-custom" data-bs-toggle="modal" data-bs-target="#searchModal">
           <i class="fas fa-search"></i> BUSCAR CLIENTE
         </button>
@@ -185,5 +185,6 @@
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="/Proyecto-Final-Seminario/public/js/index.js"></script>
+
 </body>
 </html> 
